Refonte de l'interface graphique Mise en place de la base de données SQLite